2004-08-31  Mike Kestner  <mkestner@ximian.com>

	* glib/Marshaller.cs : fix utc offseting for time_tToDateTime.
	[Fixes #60960]

2004-08-30  Tambet Ingo  <tambet@ximian.com>

	* glib/ListBase.cs : indexing bugfix for CopyTo.

2004-08-28  John Luke  <john.luke@gmail.com>

	* gdk/Gdk.metadata: change Gdk.KeyVal name return-type from
	gchar* to const-gchar*, so we do not try to modify it (call gfree).
	[Fixes #64421]

2004-08-26  Manuel V. Santos  <mvsl@telefonica.net>

	* gdk/Device.custom : glue to expose object fields.
	* gdk/DeviceAxis.custom : expand the ToString to incl use: 
	* gdk/EventButton.custom : fix for Axes prop.
	* gdk/EventMotion.custom : fix for Axes prop.
	* gdk/Gdk.metadata : hide some accessors on Device.
	* gdk/Makefile.am : add new custom.
	* gdk/glue/Makefile.am : add new .c
	* gdk/glue/makefile.win32 : add new .o
	* gdk/glue/device.c : ditto.
	* gtk/InputDialog.custom : glue to expose button fields.
	* gtk/Makefile.am : add new custom.
	* gtk/glue/Makefile.am : add new .c
	* gtk/glue/makefile.win32 : add new .o
	* gtk/glue/inputdialog.c : ditto.
	* sample/ScribbleXInput.cs : new sample using extension events.

2004-08-25  Mike Kestner  <mkestner@ximian.com>

	* generator/Signal.cs : use typeof instead of Type.GetType to
	specify the event args type.
	* glib/ObjectManager.cs : beef up the type lookup code using
	Assembly.LoadWithPartialName to fix a very popular win32 bug.
	[Fixes #61139 and friends]  Thanks to John Luke for expert
	patch testing on win32.

2004-08-25  John Luke  <john.luke@gmail.com>

	* glib/MainLoop.cs: MainLoop implementation by Jeroen
	[Fixes #61493]

2004-08-24  Mike Kestner  <mkestner@ximian.com>

	* gtk/Gtk.metadata : kill TreeDataList and TreeDataSortHeader
	internal types.

2004-08-24  Larry Ewing  <lewing@ximian.com>

	* gtk/Gtk.metadata : Style.PaintPolygon has an array of points.

2004-08-24  John Luke  <john.luke@gmail.com>

	* gtk/Makefile.am: add Menu.custom
	* gtk/Menu.custom: new custom for Popup () overload