@@ -1,5 +1,10 @@
 2004-08-31  Mike Kestner  <mkestner@ximian.com>
 
+	* gtk/NodeStore.cs : add GType prop to expose native gtype.
+	[Fixes #61226]
+
+2004-08-31  Mike Kestner  <mkestner@ximian.com>
+
 	* glib/Marshaller.cs : fix utc offseting for time_tToDateTime.
 	[Fixes #60960]
 
